# zymphony

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/zymphony/: config.py  naming.py  pipeline.py  scanner.py  service.py  spotify.py  tagging.py
tests/: test_naming.py  test_pipeline.py  test_scanner.py  test_spotify.py  test_tagging.py
