[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zymphony"
version = "0.1.0"
description = "Docker service that watches a download directory and converts Spotify playlist ZIPs into tagged music compilations for Navidrome."
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47",
    "spotipy>=2.24",
    "requests>=2.32",
    "Pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
zymphony = "zymphony.service:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]
